adicao de prototipos + parte do jira + alteracoes

--- a/abntex2-modelo-ifrs-osorio-ads-tcc.tex
+++ b/abntex2-modelo-ifrs-osorio-ads-tcc.tex
@@ -49,7 +49,6 @@
 	brazil				% o último idioma é o principal do documento
 	]{abntex2}
 
-
 \usepackage{customizacoes-ifrs-osorio}
 
 % ---
@@ -77,6 +76,10 @@
 \renewcommand{\ABNTEXsubsubsectionfont}{\slshape\bfseries}
 \renewcommand{\ABNTEXsubsubsubsectionfont}{\slshape}
 
+\usepackage[T1]{fontenc}    
+\usepackage{longtable}
+\usepackage{booktabs}
+\usepackage{geometry}
 % ---
 % Pacotes adicionais, usados apenas no âmbito do Modelo Canônico do abnteX2
 % ---
