--- a/elementos-pos-textuais/referencias.bib
+++ b/elementos-pos-textuais/referencias.bib
@@ -509,10 +509,17 @@
 }
 
 @book{gil2002elaborar,
-  title={Como elaborar projetos de pesquisa},
-  author={Gil, Ant{\^o}nio Carlos and others},
-  volume={4}
+  author    = {Gil, Antônio Carlos},
+  title     = {Como elaborar projetos de pesquisa},
+  edition   = {4},
+  publisher = {Atlas},
+  year      = {2002},
+  isbn      = {85-224-3169-8},
+  address   = {São Paulo},
+  url       = {https://files.cercomp.ufg.br/weby/up/150/o/Anexo_C1_como_elaborar_projeto_de_pesquisa_-_antonio_carlos_gil.pdf},
+  note      = {Disponível em: \url{https://files.cercomp.ufg.br/weby/up/150/o/Anexo_C1_como_elaborar_projeto_de_pesquisa_-_antonio_carlos_gil.pdf}},
 }
+
 
 @online{petrobras_simba_2024,
   title     = {SIMBA - Sistema de Monitoramento da Biodiversidade Aquática},
@@ -592,4 +599,35 @@
   year         = {2025},
   howpublished = {\url{https://www.facebook.com/}},
   note         = {Acesso em: 10 maio 2025}
+}
+
+@book{sommerville2011,
+  author       = {Ian Sommerville},
+  title        = {Engenharia de Software},
+  year         = {2011},
+  edition      = {9},
+  publisher    = {Pearson Prentice Hall},
+  address      = {São Paulo},
+  translator   = {Ivan Bosnic and Kalinka G. de O. Gonçalves},
+  note         = {Tradução da obra original: Software Engineering. Revisão técnica de Kechi Hirama. 3ª reimpressão – dez. 2013},
+  isbn         = {978-85-7936-108-1},
+  url          = {https://www.facom.ufu.br/~william/Disciplinas%202018-2/BSI-GSI030-EngenhariaSoftware/Livro/engenhariaSoftwareSommerville.pdf},
+  urldate      = {2025-05-12}
+}
+
+@book{guedesuml2,
+  title={UML 2 - Uma Abordagem Pr{\'a}tica - 3{\textordfeminine} Edi{\c{c}}{\~a}o},
+  author={Guedes, G.T.A.},
+  year={2018},
+  isbn={9788575226469},
+  url={https://books.google.com.br/books?id=RUdLDwAAQBAJ},
+  publisher={Novatec Editora}
+}
+
+@misc{faunamarinha2025,
+  author       = {{Fauna Marinha RS}},
+  title        = {Fauna Marinha RS – Animais do litoral gaúcho},
+  year         = {2025},
+  url          = {https://www.ufrgs.br/faunamarinhars/},
+  note         = {Acessado em: 12 maio 2025}
 }
