--- a/elementos-textuais/capitulo-3-cronograma.tex
+++ b/elementos-textuais/capitulo-3-cronograma.tex
@@ -1,20 +1,60 @@
 \chapter{Cronograma}\label{cronograma}
 
-O cronograma ilustrado na Tabela ~\ref{tab:cronograma} representa a trajetória de desenvolvimento do projeto ao longo de 16 meses, bem como as divergências e replanejamentos que foram realizados no decorrer do tempo. O trabalho teve seu início no dia 28 de março de 2024, com a realização de uma reunião de definição de escopo junto do orientador Marcelo Paravisi. No dia 1º de abril, deu-se continuidade com a definição do tema, em uma reunião externa com um membro do CECLIMAR. Essa etapa foi fundamental para delimitar o foco do trabalho e aprofundar a compreensão das dificuldades, necessidades, oportunidades e pontos críticos do projeto
+O cronograma ilustrado na Tabela ~\ref{tab:cronograma} representa a trajetória de 
+desenvolvimento do projeto ao longo de 16 meses, bem como as divergências e 
+replanejamentos que foram realizados no decorrer do tempo. O trabalho teve seu 
+início no dia 28 de março de 2024, com a realização de uma reunião de definição 
+de escopo junto do orientador Marcelo Paravisi. No dia 1º de abril, deu-se 
+continuidade com a definição do tema, em uma reunião externa com um membro do 
+CECLIMAR. Essa etapa foi fundamental para delimitar o foco do trabalho e aprofundar 
+a compreensão das dificuldades, necessidades, oportunidades e pontos críticos do projeto
 
-Os meses seguintes, de maio a julho de 2024, foram dedicados à revisão bibliográfica e à definição metodológica. A definição metodológica se deu durante o mês de maio tendo início no dia 06, enquanto a parte de revisão bibliográfica se iniciou no dia 05 do mesmo mês e foi finalizada no final de julho. 
+Os meses seguintes, de maio a julho de 2024, foram dedicados à revisão bibliográfica 
+e à definição metodológica. A definição metodológica se deu durante o mês de maio 
+tendo início no dia 06, enquanto a parte de revisão bibliográfica se iniciou no 
+dia 05 do mesmo mês e foi finalizada no final de julho. 
 
-O levantamento de requisitos e regras de negócio se deu a partir do dia 10 de maio e se estendeu até o final de agosto para que os alinhamentos de definições com a equipe do CECLIMAR fossem mais abertos e constantes. É importante ressaltar que durante o desenvolvimento houve mudanças de funcionalidades e ajustes de regras de negócio durante o período de testes que fizeram com que fosse necessário revisitar esse tópico. 
+O levantamento de requisitos e regras de negócio se deu a partir do dia 10 de 
+maio e se estendeu até o final de agosto para que os alinhamentos de definições 
+com a equipe do CECLIMAR fossem mais abertos e constantes. É importante ressaltar 
+que durante o desenvolvimento houve mudanças de funcionalidades e ajustes de regras 
+de negócio durante o período de testes que fizeram com que fosse necessário 
+revisitar esse tópico. 
 
-Esse período inicial de estruturação se mostrou essencial para assegurar uma base sólida para iniciar o desenvolvimento. A parte de desenvolvimento técnica se iniciou com a organização da implementação do sistema no dia 20 de maio de 2024 e, com base nisso, se iniciou a codificação do aplicativo no dia 1º de junho do mesmo ano. 
+Esse período inicial de estruturação se mostrou essencial para assegurar uma base 
+sólida para iniciar o desenvolvimento. A parte de desenvolvimento técnica se 
+iniciou com a organização da implementação do sistema no dia 20 de maio de 2024 
+e, com base nisso, se iniciou a codificação do aplicativo no dia 1º de junho do mesmo ano. 
 
-Inicialmente, o desenvolvimento tinha um planejamento de conclusão para o final de outubro, porém, embora as atividades tenham progredido conforme o cronograma, em uma reunião com o orientador do projeto foi decido realizar uma alteração no cronograma adicionando uma etapa de testes disponibilizando a aplicação com testadores tanto do projeto parceiro, como terceiros que contribuíram para que a aplicação adquirisse uma maturidade maior. Com isso, o prazo final de codificação foi replanejado para o início de maio de 2025 (Tabela ~\ref{tab:cronograma}).
+Inicialmente, o desenvolvimento tinha um planejamento de conclusão para o final 
+de outubro, porém, embora as atividades tenham progredido conforme o cronograma, 
+em uma reunião com o orientador do projeto foi decido realizar uma alteração no 
+cronograma adicionando uma etapa de testes disponibilizando a aplicação com 
+testadores tanto do projeto parceiro, como terceiros que contribuíram para que 
+a aplicação adquirisse uma maturidade maior. Com isso, o prazo final de codificação 
+foi replanejado para o início de maio de 2025 (Tabela ~\ref{tab:cronograma}).
 
-A parte de redação da parte escrita do trabalho de conclusão foi iniciada paralelamente com a codificação para obter uma documentação mais precisa do processo e estava planejada para ser concluída até o final de novembro de 2024, porém, também foi afetada pelo replanejamento. Em vermelho na Tabela ~\ref{tab:cronograma} podemos ver que esta etapa foi realizada dentro do prazo previsto até o mes de outubro, porém em novembro foi adiada para maio e junho para priorizar a conclusão da codificação e o aprimoramento da qualidade da aplicação.
-O desenvolvimento continuou sendo a atividade central até maio de 2025, acompanhado de execuções constantes de testes. No mês de maio de 2025 a redação do trabalho retornou e se estendeu, junto da revisão textual, até o final de junho para ser entregue dentro da data máxima de 26 de junho. A apresentação para a banca até o momento havia sido definida, porém tem prazo máximo de 11 de julho de 2025.
+A parte de redação da parte escrita do trabalho de conclusão foi iniciada 
+paralelamente com a codificação para obter uma documentação mais precisa 
+do processo e estava planejada para ser concluída até o final de novembro 
+de 2024, porém, também foi afetada pelo replanejamento. Em vermelho na 
+Tabela ~\ref{tab:cronograma} podemos ver que esta etapa foi realizada dentro 
+do prazo previsto até o mes de outubro, porém em novembro foi adiada para maio 
+e junho para priorizar a conclusão da codificação e o aprimoramento da qualidade 
+da aplicação.
+O desenvolvimento continuou sendo a atividade central até maio de 2025, acompanhado 
+de execuções constantes de testes. No mês de maio de 2025 a redação do trabalho 
+retornou e se estendeu, junto da revisão textual, até o final de junho para ser 
+entregue dentro da data máxima de 26 de junho. A apresentação para a banca até o 
+momento havia sido definida, porém tem prazo máximo de 11 de julho de 2025.
 
-Esse cronograma evidencia o fluxo de trabalho realizado desde o início do planejamento do projeto, bem como as alterações ocorridas durante seu desenvolvimento. Para a elaboração desse material, foi fundamental que os períodos de escrita e codificação estivessem bem alinhados, permitindo traçar e documentar, com maior precisão, a linha do tempo apresentada, desde o início até a entrega final planejada.
+Esse cronograma evidencia o fluxo de trabalho realizado desde o início do 
+planejamento do projeto, bem como as alterações ocorridas durante seu desenvolvimento. 
+Para a elaboração desse material, foi fundamental que os períodos de escrita e codificação 
+estivessem bem alinhados, permitindo traçar e documentar, com maior precisão, a linha do 
+tempo apresentada, desde o início até a entrega final planejada.
 
+% a tabela realmente ficou bem representativa? 
 \begin{table}[ht]
 \centering
 \renewcommand{\arraystretch}{1.5}
